--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:client && npm run build:server && npm run build:prerender",
-"build:client": "vite build",
-"build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-"build:prerender": "node prerender",
+    "build": "vite build",
+
 
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
